--- a/404.html
+++ b/404.html
@@ -107,7 +107,7 @@
       </ul>
     </div>
     
-    <p>📧 Contact: <strong>25ds1000082@ds.study.iitm.ac.in</strong></p>
+    <p>📧 Contact: 25ds1000082@ds.study.iitm.ac.in</p>
     <a href="/">← Go Back Home</a>
   </div>
 </body>
