Update email display in 404.html
Removed 'Contact:' label from email address in 404 page.

--- a/404.html
+++ b/404.html
@@ -107,7 +107,7 @@
       </ul>
     </div>
     
-   <p>Contact: 25ds1000082@ds.study.iitm.ac.in</p>
+   <p>25ds1000082@ds.study.iitm.ac.in</p>
     <a href="/">← Go Back Home</a>
   </div>
 </body>
