Add email address to 404 error page

--- a/404.html
+++ b/404.html
@@ -104,6 +104,7 @@
         <li>✅ Check the URL for typos</li>
         <li>✅ Go back to the home page</li>
         <li>✅ Contact us if you think this is an error</li>
+        <li>✅ 25ds1000082@ds.study.iitm.ac.in</li>
       </ul>
     </div>
     
