--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Welcome to My Site</title>
   <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
@@ -13,7 +18,6 @@
       justify-content: center;
       align-items: center;
       color: white;
-      margin: 0;
     }
     .container {
       text-align: center;
@@ -57,7 +61,7 @@
   <div class="container">
     <h1>🌟 Welcome to My Site</h1>
     <p>This is a demonstration of GitHub Pages with custom 404 error handling.</p>
-    <p>Contact: 25ds1000082@ds.study.iitm.ac.in</p>
+    <p>📧 Contact: <strong>25ds1000082@ds.study.iitm.ac.in</strong></p>
     <a href="/nonexistent-page">🔍 Test 404 Page</a>
   </div>
 </body>
